--- a/MicroProject_02/styles.css
+++ b/MicroProject_02/styles.css
@@ -23,7 +23,7 @@ body{
 .navbar{
   width:100%;
   background: #6F6AF7;
-  height: 160px;
+  height: 80px;
   position: fixed;
 }
 .icon{
@@ -31,20 +31,20 @@ body{
   margin:Auto;
 }
 .logo{
-  margin-top: 55px;;
-  margin-left: 115px;
+  margin-top: 25px;;
+  margin-left: 75px;
   
 }
 .logo img{
-  width: 125%;
+  width: 85%;
   height: auto;
 }
 
 .menu{
   width:700px;
   float: left;
-  height: 70px;
-  margin-left: 230px;
+  height: 30px;
+  margin-left: 90px;
 }
 
 ul{
@@ -52,25 +52,25 @@ ul{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 700px;
+  margin-left: 250px;
 }
 ul li{
   list-style: none;
-  margin-left: 60px;
-  margin-top:55px;
+  margin-left: 30px;
+  margin-top:30px;
 }
 
 ul li a{
   text-decoration: none;
-  font-size: 50px;
+  font-size: 25px;
   color:#ffff;
   
 }
 
 ul #vec1{
-  margin-top:55px;
+  margin-top:30px;
   padding-left: 7px;
-  width: 20px;
+  width: 15px;
 }
 .srh{
   float: left;
@@ -78,10 +78,9 @@ ul #vec1{
   align-items: center;
   background-color: #ffff;
   border: 2px solid #ffff;
-  border-radius: 45px;
-  padding: 15px 35px;
-  margin-top: 45px;
-  margin-left:1000px;
+  border-radius: 35px;
+  padding: 5px 10px;
+  margin-left:850px;
 
 }
 .srh #text1{
@@ -89,12 +88,13 @@ ul #vec1{
   border: none;
   background: transparent;
   outline: none;
-  padding: 5px;
-  font-size: 30px;
+  padding: 2px;
+  font-size: 10px;
 }
+
 .srh img{
-  width: 30px;
-  height: 30px;
+  width: 15px;
+  height: 15px;
   background-color: #ffff;
   border-radius: 50%;
   margin-top: 3px;
@@ -102,13 +102,14 @@ ul #vec1{
 }
 
 .contain{
-  margin-top: 55px;
+  margin-top: 30px;
   width: auto;
-  height: 80px;
+  height: 10px;
 }
 
 .contain #vec2{
-  padding-left: 70px;
+  padding-left: 40px;
+  height: 30px;
 }
 
 /*................................ body page */
@@ -120,89 +121,86 @@ ul #vec1{
 .row1{
   display: flex;
   float: left;
-  padding-top:280px;
+  padding-top:120px;
  
 }
 .row1 #bodyimg1{
-  margin-left:150px;
-  width: 30%;
-  height:800px;
+  margin-left:80px;
+  width: 25%;
+  height:400px;
 }
 
 .bodytext{
 background-color: #E5D8FF;
-height: 700px;
-width: 1900px;
-margin-top: 40px;
-margin-left: 40px;
+height: 350px;
+width: 1000px;
+margin-top: 30px;
+margin-left: 30px;
 border-radius: 20px;
 }
 .bodytext #text{
-  padding-top:40px;
-  padding-left:50px;
-  font-size: 30px;
+  padding-top:30px;
+  padding-left:30px;
+  font-size: 20px;
 }
 
 .row1 #media {
   position: sticky;
   float: right;
-  top: 170px; 
-  width: 120px;
-  height: 400px;
-  margin-left: 70px;
-  margin-top: 190px; 
+  top: 80px; 
+  width: 60px;
+  height: 200px;
+  margin-left: 40px;
+  margin-right: 5px;
+  margin-top: 100px; 
 }
 
 
 .row2{
-  grid-gap:250px;
+  grid-gap:95px;
   display: flex;
   float: left;
-  padding-top: 100px;
-  margin-left: 40px;
+  padding-top: 50px;
+  margin-left: 20px;
 }
 .row2 p{
-  font-size: 35px;
+  font-size: 20px;
   color: #ffff;
 }
 .row2 #p1{
   background-color: #929DFF;
-  margin-left: 150px;
-  width: 350px;
-  height:140px;
+  margin-left: 70px;
+  width: 180px;
+  height:70px;
   border-radius: 20px;
-  padding-top: 30px;
-  padding-left: 30px;
+  padding:15px;
   box-shadow: 0px 7px 7px 4px rgba(141, 140, 140, 0.5);
 }
 .row2 #p2{
   background-color: #734CF2;
-  margin-left: 130px;
-  width: 350px;
-  height:140px;
+  margin-left: 70px;
+  width: 180px;
+  height:70px;
   border-radius: 20px;
-  padding-top: 30px;
-  padding-left: 30px;
+  padding:15px;
   box-shadow: 0px 7px 7px 4px rgba(141, 140, 140, 0.5);
 }
 .row2 #p3{
   background-color: #D288FF;
-  margin-left: 130px;
-  width: 350px;
-  height:140px;
+  margin-left: 70px;
+  width: 180px;
+  height:70px;
   border-radius: 20px;
-  padding-top: 30px;
-  padding-left: 30px;
+  padding:15px;
   box-shadow: 0px 7px 7px 4px rgba(141, 140, 140, 0.5);
 }
 .row2 #p4{
   background-color: #000000;
-  margin-left: 130px;
-  width: 350px;
-  height:140px;
+  margin-left: 70px;
+  width: 180px;
+  height:70px;
   border-radius: 20px;
-  padding-top: 30px;
-  padding-left: 30px;
+  padding:15px;
   box-shadow: 0px 7px 7px 4px rgba(141, 140, 140, 0.5);
   
 }
@@ -210,7 +208,7 @@ border-radius: 20px;
 .row2 #cont{
   position: fixed;
   margin-top:30px;
-  width: 220px;
+  width: 120px;
   height: auto;
 }
 
@@ -226,13 +224,13 @@ border-radius: 20px;
 }
 
 .blue-container {
-  margin-top: 250px;
+  margin-top: 150px;
   width: 80%;
   height: 60%;
   background-color: #3730ee;
   border-radius: 20px;
   display: flex;
-  padding: 80px;
+  padding: 40px;
 }
 
 .left-column {
@@ -240,24 +238,25 @@ border-radius: 20px;
   flex-direction: column;
   justify-content: flex-start;
   width: 20%;
-  padding-right: 120px;
-  padding-left: 40px;
+  padding-right: 60px;
+  padding-left: 20px;
 }
 
 .left-column button {
-  margin-top: 30px;
-  margin-bottom: 150px;
-  padding: 50px 20px;
-  padding-left: 100px;
+  margin-top: 20px;
+  margin-bottom: 70px;
+  padding: 25px 20px;
+  padding-left: 40px;
   border: none;
-  border-radius: 20px;
-  font-size: 35px;
+  border-radius: 10px;
+  font-size: 18px;
   cursor: pointer;
   width: 100%;
   text-align: left;
 }
 
 .info-button {
+  box-shadow: 0px 3px 3px 3px rgba(19, 18, 18, 0.5);
   background-color: #BFDEFB;
   color: black;
 }
@@ -265,12 +264,13 @@ border-radius: 20px;
 .bookmark-button, .settings-button {
   background-color: #2f29e6;
   color: white;
-  border: 5px solid white !important;
+  border: 3px solid white !important;
 }
 
 
 .right-column {
-  width: 70%;
+  width: 85%;
+  height: 95%;
 }
 
 .info-box {
@@ -282,32 +282,32 @@ border-radius: 20px;
 }
 
 .info-box h2 {
-  font-size: 60px;
-  padding-top: 60px ;
-  padding-left:60px;
-  margin-bottom: 60px;
+  font-size: 30px;
+  padding-top: 30px ;
+  padding-left:30px;
+  margin-bottom: 30px;
 }
 
 .info-box p {
-  font-size: 40px;
-  margin-left: 100px;
-  margin-bottom: 30px;
+  font-size: 20px;
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
 .next-button {
   position: absolute;
-  bottom: 60px;
-  right: 60px;
+  bottom: 30px;
+  right: 30px;
   background-color: black;
   color: white;
   border: none;
-  padding: 30px 60px;
+  padding: 10px 30px;
   border-radius: 8px;
   cursor: pointer;
 }
 .next-button span1{
-  font-size: 30px;
+  font-size: 15px;
 }
 .next-button span{
-  font-size: 40px;
+  font-size: 20px;
 }
